--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>bRR</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="style.css">
         <script defer src="script/main.js"></script>
         <script defer src="script/background.js"></script>
