--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <article id="menu">
             <div>
                 <span>Radial Gradient Size</span><span class="value"></span>
-                <input type="range" id="size" min="10" max="100" value="25"/>
+                <input type="range" id="size" min="10" max="100" value="100"/>
 
                 <span>Color Count</span><span class="value"></span>
                 <input type="range" id="points" min="1" max="25" value="5"/>
@@ -48,8 +48,6 @@
                 </section>
             </div>
         </article>
-        <div id="toggle">
-            &nbsp;>
-        </div>
+        <div id="handle"></div>
     </body>
 </html>
