--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
 
         <article id="menu">
             <div>
-                <span>Radial Gradient Size</span><span class="value"></span>
-                <input type="range" id="size" min="10" max="100" value="30"/>
-
                 <span>Color Count</span><span class="value"></span>
-                <input type="range" id="points" min="1" max="25" value="5"/>
+                <input type="range" id="points" min="1" max="20" value="5"/>
+
+                <span>Color Strength</span><span class="value"></span>
+                <input type="range" id="colorStrength" min="1" max="5" value="2"/>
+                
+                <span>Color Changing Speed</span><span class="value"></span>
+                <input type="range" id="colorSpeed" min="0" max="10" value="3"/>
 
                 <span>Shape Changing Speed</span><span class="value"></span>
-                <input type="range" id="shapeSpeed" min="0" max="25" value="5"/>
+                <input type="range" id="shapeSpeed" min="0" max="10" value="3"/>
 
-                <span>Color Changing Speed</span><span class="value"></span>
-                <input type="range" id="colorSpeed" min="0" max="50" value="10"/>
+                <span>Optimization</span><span class="value"></span>
+                <input type="range" id="size" min="1" max="5" value="2"/>
                 
                 <span>Red</span><span class="value"><span class="min value"></span> - <span class="max value"></span></span>
                 <section class="doubleSlider">
